tests/buildErrors/tupleUnpackId.manifold.error
Error at line 12, char 7: Index-based entries must be unpacked before namespaced identifiers